5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1668_1393.log
== TEST (2019-04-15 19:38:40) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(a+peso)*0,05
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(a+peso)*0,05
                              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:22) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*0,05 2)
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round(a+peso)*0,05 2)
                                    ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:36) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*0,05, 2)
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round(a+peso)*0,05, 2)
                                    ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:48) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*0,5 2)
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round(a+peso)*0,5 2)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:56) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*0,5 1)
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round(a+peso)*0,5 1)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:18) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round"(a+peso)*0,5 1")
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round"(a+peso)*0,5 1")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:34) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round"(a+peso)*0,05 2")
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 6
    excesso= float(round"(a+peso)*0,05 2")
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:50) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(b+peso+taxa)*0,04
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 8
    excesso=float(b+peso+taxa)*0,04
                                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:32) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(round(excesso 2)
	
	
-- ERROR:
File "XXXX", line 9
    print(round(excesso 2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:44) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(excesso<excesso2):
NameError: name 'excesso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:45) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- EXECUTION TIME:
0.180229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 5, in <module>
    if(excesso<excesso2):
NameError: name 'excesso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:56) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= (60,00)
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print("excesso")
	
	
-- EXECUTION TIME:
0.296998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 5, in <module>
    if(excesso<excesso2):
NameError: name 'excesso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:30) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= round("60,00 2")
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- EXECUTION TIME:
0.119562
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:32) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= round("60,00 2")
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:08) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= round("60,00 2")
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- EXECUTION TIME:
0.175665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:11) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999,9)
b=(5000,0)
taxa= round("60,00 2")
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:49:30) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999.9)
b=(5000.0)
taxa= round("60,00 2")
if(excesso<excesso2):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- EXECUTION TIME:
0.166579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:54:10) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999.9)
b=(5000.0)
taxa= round("60,00 2")
if(a<b+taxa):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- EXECUTION TIME:
0.164366
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1393/main.py", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:12) 
-- CODE:
peso=float(input("leia o peso da encomenda:"))
a=(4999.9)
b=(5000.0)
taxa= round("60,00 2")
if(a<b+taxa):
	excesso= float(round(a+peso)*"0,05 2")
else:
	excesso=float(round(b+peso+taxa)*"0,04 2")
print(excesso)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    taxa= round("60,00 2")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
